--- a/CSS/home.css
+++ b/CSS/home.css
@@ -17,3 +17,47 @@
 	width: 70%;
 	margin-left: 16%;
 }
+
+nav {
+	background-color: #323dbc;
+}
+
+img {
+	width: 400px ;
+	height: 400px;
+}
+
+#grantanswers {
+	display: inline-block;
+	margin-left: 7%;
+	margin-top: 1%;
+	margin-bottom: 1%;
+}
+
+#grid-2 {
+	display: inline-block;
+	margin-left: 2%;
+	text-align: center;
+	margin-left: 5%;
+	margin-top: 1%;
+	margin-bottom: 1%;
+}
+
+#grid-3 {
+	display: inline-block;
+	margin-left: 2%;
+	text-align: center;
+	margin-left: 5%;
+	margin-top: 1%;
+	margin-bottom: 1%;
+}
+
+h5 {
+	text-align: center;
+	color: white;
+}
+
+h4 {
+	text-align: center;
+	color: white;
+}
