--- a/CSS/home.css
+++ b/CSS/home.css
@@ -31,6 +31,13 @@
 	top: 7px;
 }
 
+#github {
+	height: 50px;
+	width: 50px;
+	position: relative;
+	top: 7px;
+}
+
 img {
 	width: 400px ;
 	height: 400px;
